--- a/Auth/Views/Home/Index.cshtml
+++ b/Auth/Views/Home/Index.cshtml
@@ -51,7 +51,7 @@
 
                 @if (User.Identity.IsAuthenticated == false)
                 {
-                    <li><a href="#">Sign Up</a></li>
+                    <li><a href="https://accounts.google.com/signup/v2/webcreateaccount?flowName=GlifWebSignIn&flowEntry=SignUp">Sign Up</a></li>
 
                     <li>
                         @*<a href="#"></a><button type="button" class="button1">Log In</button></a>*@
