--- a/Auth/Views/Shared/_Layout.cshtml
+++ b/Auth/Views/Shared/_Layout.cshtml
@@ -49,13 +49,12 @@
             </li>
 
 
-            <li><a href="#">Sign Up</a></li>
             @if (User.Identity.IsAuthenticated == false)
-            { 
+            {
+                <li><a href="https://accounts.google.com/signup/v2/webcreateaccount?flowName=GlifWebSignIn&flowEntry=SignUp">Sign Up</a></li>
+
                 <li>
                     @*<a href="#"></a><button type="button" class="button1">Log In</button></a>*@
-
-                    
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Secured">
                         <button type="button" class="button1">
                             Log In
