--- a/Auth/Views/Home/Admin.cshtml
+++ b/Auth/Views/Home/Admin.cshtml
@@ -43,7 +43,7 @@
 </style>
 
 
-
+    
 
 <body>
     <div class="QPQuestions">
@@ -55,8 +55,8 @@
                     Add
                 </button>
             </a>
-            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Quiz">
-                <button type="button" class="button2">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home">
+                <button type="button" class="button2" id="buttonChange">
                     Edit
                 </button>
             </a>
@@ -77,7 +77,7 @@
                     <input type="text" id="bstatus" name="bstatus"><br><br>
                     <label for="border">Bird Habitat:</label>
                     <input type="text" id="bhabitat" name="bhabitat"><br><br>                    
-                    <input type="submit" value="Save">
+                    <input type="submit" value="Save" id="SaveButton">
                 }
 
                 Click the "Submit" button and the form-data will be sent to a page on the
