--- a/Auth/Views/Home/QuizOptions.cshtml
+++ b/Auth/Views/Home/QuizOptions.cshtml
@@ -3,6 +3,15 @@
     <title>Quiz Options</title>
     
 </head>
+
+
+@*Read the user-inputted number of questions*@
+<script>
+    function readNumberOfQuestions() {
+        var inputValue = document.getElementById("compulsoryNumber").value;
+    }
+</script>
+
     <body oncontextmenu="return false;">
 
         <div class="QPage1">
